SERVER-5378 out {} parameters position independence

Where we put replace, db, inline, etc within the map-reduce "out"
BSON object shouldn't matter